includes/svdpi.h

typedef unsigned __int32 uint32_t;
typedef unsigned __int8 uint8_t;
/* canonical representation */
#define sv_0 0
#define sv_1 1
#define sv_z 2
#define sv_x 3
/* common type for 'bit' and 'logic' scalars. */
typedef uint8_t svScalar;
typedef svScalar svBit; /* scalar */
typedef svScalar svLogic; /* scalar */
typedef struct vpi_vecval
{
    uint32_t aval;
    uint32_t bval;
} s_vpi_vecval, *p_vpi_vecval;
/* (a chunk of) packed logic array */
typedef s_vpi_vecval svLogicVecVal;
/* (a chunk of) packed bit array */
typedef uint32_t svBitVecVal;
/*
 * Implementation-dependent representation.
 */
/*
 * Return implementation version information string ("P1800-2005" or "SV3.1a").
 */
XXTERN const char * svDpiVersion();
/* a handle to a scope (an instance of a module or interface) */
XXTERN typedef void * svScope;
/* a handle to a generic object (actually, unsized array) */
XXTERN typedef void * svOpenArrayHandle;
/*
 * Bit select utility functions.
 *
 * Packed arrays are assumed to be indexed n-1:0,
 * where 0 is the index of least significant bit
 */

/* s=source, i=bit-index */
XXTERN svBit svGetBitselBit (const svBitVecVal * s, int i);
XXTERN svLogic svGetBitselLogic (const svLogicVecVal * s, int i);
/* d=destination, i=bit-index, s=scalar */
XXTERN void svPutBitselBit (svBitVecVal * d, int i, svBit s);
XXTERN void svPutBitselLogic (svLogicVecVal * d, int i, svLogic s);
/*
 * Part select utility functions.
 *
 * A narrow (<=32 bits) part select is extracted from the
 * source representation and written into the destination word.
 *
 * Normalized ranges and indexing [n-1:0] are used for both arrays.
 *
 * s=source, d=destination, i=starting bit index, w=width
 * like for variable part selects; limitations: w <= 32
 */
XXTERN void svGetPartselBit (svBitVecVal * d, const svBitVecVal * s, int i, int w);
XXTERN void svGetPartselLogic (svLogicVecVal * d, const svLogicVecVal * s, int i, int w);
typedef unsigned int svBitVec32;/* (a chunk of) packed bit array */
typedef struct
{
    unsigned int c;
    unsigned int d;
}
svLogicVec32; /* (a chunk of) packed logic array */
/* reference to a standalone packed array */
typedef void * svBitPackedArrRef;
typedef void * svLogicPackedArrRef;