wrapper/svdpi_wrapper.nim


type
  svScalar_1090519492 = uint8 ## Generated based on includes/svdpi.h:75:17
  svBit_1090519495 = svScalar_1090519494 ## Generated based on includes/svdpi.h:76:18
  svLogic_1090519497 = svScalar_1090519494 ## Generated based on includes/svdpi.h:77:18
  struct_vpi_vecval_1090519499 {.pure, inheritable, bycopy.} = object
    aval*: uint32            ## Generated based on includes/svdpi.h:87:16
    bval*: uint32
  s_vpi_vecval_1090519501 = struct_vpi_vecval_1090519500 ## Generated based on includes/svdpi.h:91:3
  p_vpi_vecval_1090519503 = ptr struct_vpi_vecval_1090519500 ## Generated based on includes/svdpi.h:91:18
  svLogicVecVal_1090519505 = s_vpi_vecval_1090519502 ## Generated based on includes/svdpi.h:95:22
  svBitVecVal_1090519507 = uint32 ## Generated based on includes/svdpi.h:98:18
  svScope_1090519509 = pointer ## Generated based on includes/svdpi.h:127:23
  svOpenArrayHandle_1090519511 = pointer ## Generated based on includes/svdpi.h:130:23
  svBitVec32_1090519513 = cuint ## Generated based on includes/svdpi.h:373:22
  struct_svLogicVec32_1090519515 {.pure, inheritable, bycopy.} = object
    c*: cuint                ## Generated based on includes/svdpi.h:374:9
    d*: cuint
  svLogicVec32_1090519517 = struct_svLogicVec32_1090519516 ## Generated based on includes/svdpi.h:379:1
  svBitPackedArrRef_1090519519 = pointer ## Generated based on includes/svdpi.h:382:16
  svLogicPackedArrRef_1090519521 = pointer ## Generated based on includes/svdpi.h:383:16
  svLogicVec32_1090519518 = (when declared(svLogicVec32):
    when ownSizeof(svLogicVec32) != ownSizeof(svLogicVec32_1090519517):
      static :
        warning("Declaration of " & "svLogicVec32" &
            " exists but with different size")
    svLogicVec32
  else:
    svLogicVec32_1090519517)
  svScalar_1090519494 = (when declared(svScalar):
    when ownSizeof(svScalar) != ownSizeof(svScalar_1090519492):
      static :
        warning("Declaration of " & "svScalar" &
            " exists but with different size")
    svScalar
  else:
    svScalar_1090519492)
  svBitVec32_1090519514 = (when declared(svBitVec32):
    when ownSizeof(svBitVec32) != ownSizeof(svBitVec32_1090519513):
      static :
        warning("Declaration of " & "svBitVec32" &
            " exists but with different size")
    svBitVec32
  else:
    svBitVec32_1090519513)
  svBit_1090519496 = (when declared(svBit):
    when ownSizeof(svBit) != ownSizeof(svBit_1090519495):
      static :
        warning("Declaration of " & "svBit" & " exists but with different size")
    svBit
  else:
    svBit_1090519495)
  struct_svLogicVec32_1090519516 = (when declared(struct_svLogicVec32):
    when ownSizeof(struct_svLogicVec32) != ownSizeof(struct_svLogicVec32_1090519515):
      static :
        warning("Declaration of " & "struct_svLogicVec32" &
            " exists but with different size")
    struct_svLogicVec32
  else:
    struct_svLogicVec32_1090519515)
  svLogicPackedArrRef_1090519522 = (when declared(svLogicPackedArrRef):
    when ownSizeof(svLogicPackedArrRef) != ownSizeof(svLogicPackedArrRef_1090519521):
      static :
        warning("Declaration of " & "svLogicPackedArrRef" &
            " exists but with different size")
    svLogicPackedArrRef
  else:
    svLogicPackedArrRef_1090519521)
  s_vpi_vecval_1090519502 = (when declared(s_vpi_vecval):
    when ownSizeof(s_vpi_vecval) != ownSizeof(s_vpi_vecval_1090519501):
      static :
        warning("Declaration of " & "s_vpi_vecval" &
            " exists but with different size")
    s_vpi_vecval
  else:
    s_vpi_vecval_1090519501)
  svLogic_1090519498 = (when declared(svLogic):
    when ownSizeof(svLogic) != ownSizeof(svLogic_1090519497):
      static :
        warning("Declaration of " & "svLogic" &
            " exists but with different size")
    svLogic
  else:
    svLogic_1090519497)
  p_vpi_vecval_1090519504 = (when declared(p_vpi_vecval):
    when ownSizeof(p_vpi_vecval) != ownSizeof(p_vpi_vecval_1090519503):
      static :
        warning("Declaration of " & "p_vpi_vecval" &
            " exists but with different size")
    p_vpi_vecval
  else:
    p_vpi_vecval_1090519503)
  svScope_1090519510 = (when declared(svScope):
    when ownSizeof(svScope) != ownSizeof(svScope_1090519509):
      static :
        warning("Declaration of " & "svScope" &
            " exists but with different size")
    svScope
  else:
    svScope_1090519509)
  svBitPackedArrRef_1090519520 = (when declared(svBitPackedArrRef):
    when ownSizeof(svBitPackedArrRef) != ownSizeof(svBitPackedArrRef_1090519519):
      static :
        warning("Declaration of " & "svBitPackedArrRef" &
            " exists but with different size")
    svBitPackedArrRef
  else:
    svBitPackedArrRef_1090519519)
  svLogicVecVal_1090519506 = (when declared(svLogicVecVal):
    when ownSizeof(svLogicVecVal) != ownSizeof(svLogicVecVal_1090519505):
      static :
        warning("Declaration of " & "svLogicVecVal" &
            " exists but with different size")
    svLogicVecVal
  else:
    svLogicVecVal_1090519505)
  svOpenArrayHandle_1090519512 = (when declared(svOpenArrayHandle):
    when ownSizeof(svOpenArrayHandle) != ownSizeof(svOpenArrayHandle_1090519511):
      static :
        warning("Declaration of " & "svOpenArrayHandle" &
            " exists but with different size")
    svOpenArrayHandle
  else:
    svOpenArrayHandle_1090519511)
  struct_vpi_vecval_1090519500 = (when declared(struct_vpi_vecval):
    when ownSizeof(struct_vpi_vecval) != ownSizeof(struct_vpi_vecval_1090519499):
      static :
        warning("Declaration of " & "struct_vpi_vecval" &
            " exists but with different size")
    struct_vpi_vecval
  else:
    struct_vpi_vecval_1090519499)
  svBitVecVal_1090519508 = (when declared(svBitVecVal):
    when ownSizeof(svBitVecVal) != ownSizeof(svBitVecVal_1090519507):
      static :
        warning("Declaration of " & "svBitVecVal" &
            " exists but with different size")
    svBitVecVal
  else:
    svBitVecVal_1090519507)
when not declared(svLogicVec32):
  type
    svLogicVec32* = svLogicVec32_1090519517
else:
  static :
    hint("Declaration of " & "svLogicVec32" & " already exists, not redeclaring")
when not declared(svScalar):
  type
    svScalar* = svScalar_1090519492
else:
  static :
    hint("Declaration of " & "svScalar" & " already exists, not redeclaring")
when not declared(svBitVec32):
  type
    svBitVec32* = svBitVec32_1090519513
else:
  static :
    hint("Declaration of " & "svBitVec32" & " already exists, not redeclaring")
when not declared(svBit):
  type
    svBit* = svBit_1090519495
else:
  static :
    hint("Declaration of " & "svBit" & " already exists, not redeclaring")
when not declared(struct_svLogicVec32):
  type
    struct_svLogicVec32* = struct_svLogicVec32_1090519515
else:
  static :
    hint("Declaration of " & "struct_svLogicVec32" &
        " already exists, not redeclaring")
when not declared(svLogicPackedArrRef):
  type
    svLogicPackedArrRef* = svLogicPackedArrRef_1090519521
else:
  static :
    hint("Declaration of " & "svLogicPackedArrRef" &
        " already exists, not redeclaring")
when not declared(s_vpi_vecval):
  type
    s_vpi_vecval* = s_vpi_vecval_1090519501
else:
  static :
    hint("Declaration of " & "s_vpi_vecval" & " already exists, not redeclaring")
when not declared(svLogic):
  type
    svLogic* = svLogic_1090519497
else:
  static :
    hint("Declaration of " & "svLogic" & " already exists, not redeclaring")
when not declared(p_vpi_vecval):
  type
    p_vpi_vecval* = p_vpi_vecval_1090519503
else:
  static :
    hint("Declaration of " & "p_vpi_vecval" & " already exists, not redeclaring")
when not declared(svScope):
  type
    svScope* = svScope_1090519509
else:
  static :
    hint("Declaration of " & "svScope" & " already exists, not redeclaring")
when not declared(svBitPackedArrRef):
  type
    svBitPackedArrRef* = svBitPackedArrRef_1090519519
else:
  static :
    hint("Declaration of " & "svBitPackedArrRef" &
        " already exists, not redeclaring")
when not declared(svLogicVecVal):
  type
    svLogicVecVal* = svLogicVecVal_1090519505
else:
  static :
    hint("Declaration of " & "svLogicVecVal" &
        " already exists, not redeclaring")
when not declared(svOpenArrayHandle):
  type
    svOpenArrayHandle* = svOpenArrayHandle_1090519511
else:
  static :
    hint("Declaration of " & "svOpenArrayHandle" &
        " already exists, not redeclaring")
when not declared(struct_vpi_vecval):
  type
    struct_vpi_vecval* = struct_vpi_vecval_1090519499
else:
  static :
    hint("Declaration of " & "struct_vpi_vecval" &
        " already exists, not redeclaring")
when not declared(svBitVecVal):
  type
    svBitVecVal* = svBitVecVal_1090519507
else:
  static :
    hint("Declaration of " & "svBitVecVal" & " already exists, not redeclaring")
when not declared(sv_0):
  when 0 is static:
    const
      sv_0* = 0              ## Generated based on includes/svdpi.h:69:9
  else:
    let sv_0* = 0            ## Generated based on includes/svdpi.h:69:9
else:
  static :
    hint("Declaration of " & "sv_0" & " already exists, not redeclaring")
when not declared(sv_1):
  when 1 is static:
    const
      sv_1* = 1              ## Generated based on includes/svdpi.h:70:9
  else:
    let sv_1* = 1            ## Generated based on includes/svdpi.h:70:9
else:
  static :
    hint("Declaration of " & "sv_1" & " already exists, not redeclaring")
when not declared(sv_z):
  when 2 is static:
    const
      sv_z* = 2              ## Generated based on includes/svdpi.h:71:9
  else:
    let sv_z* = 2            ## Generated based on includes/svdpi.h:71:9
else:
  static :
    hint("Declaration of " & "sv_z" & " already exists, not redeclaring")
when not declared(sv_x):
  when 3 is static:
    const
      sv_x* = 3              ## Generated based on includes/svdpi.h:72:9
  else:
    let sv_x* = 3            ## Generated based on includes/svdpi.h:72:9
else:
  static :
    hint("Declaration of " & "sv_x" & " already exists, not redeclaring")
when not declared(svDpiVersion):
  proc svDpiVersion*(): cstring {.cdecl, importc: "svDpiVersion".}
else:
  static :
    hint("Declaration of " & "svDpiVersion" & " already exists, not redeclaring")
when not declared(svGetBitselBit):
  proc svGetBitselBit*(s: ptr svBitVecVal_1090519508; i: cint): svBit_1090519496 {.
      cdecl, importc: "svGetBitselBit".}
else:
  static :
    hint("Declaration of " & "svGetBitselBit" &
        " already exists, not redeclaring")
when not declared(svGetBitselLogic):
  proc svGetBitselLogic*(s: ptr svLogicVecVal_1090519506; i: cint): svLogic_1090519498 {.
      cdecl, importc: "svGetBitselLogic".}
else:
  static :
    hint("Declaration of " & "svGetBitselLogic" &
        " already exists, not redeclaring")
when not declared(svPutBitselBit):
  proc svPutBitselBit*(d: ptr svBitVecVal_1090519508; i: cint; s: svBit_1090519496): void {.
      cdecl, importc: "svPutBitselBit".}
else:
  static :
    hint("Declaration of " & "svPutBitselBit" &
        " already exists, not redeclaring")
when not declared(svPutBitselLogic):
  proc svPutBitselLogic*(d: ptr svLogicVecVal_1090519506; i: cint; s: svLogic_1090519498): void {.
      cdecl, importc: "svPutBitselLogic".}
else:
  static :
    hint("Declaration of " & "svPutBitselLogic" &
        " already exists, not redeclaring")
when not declared(svGetPartselBit):
  proc svGetPartselBit*(d: ptr svBitVecVal_1090519508; s: ptr svBitVecVal_1090519508;
                        i: cint; w: cint): void {.cdecl,
      importc: "svGetPartselBit".}
else:
  static :
    hint("Declaration of " & "svGetPartselBit" &
        " already exists, not redeclaring")
when not declared(svGetPartselLogic):
  proc svGetPartselLogic*(d: ptr svLogicVecVal_1090519506; s: ptr svLogicVecVal_1090519506;
                          i: cint; w: cint): void {.cdecl,
      importc: "svGetPartselLogic".}
